<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg"
    tools:context=".activity.RewardHistoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:background="@drawable/splash_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:src="@drawable/app_logo_name"
                android:contentDescription="@string/content_description" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_6sdp"
                android:foreground="?android:attr/selectableItemBackground"
                android:contentDescription="@string/content_description" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/view_separator_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reward_claimed"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:fontFamily="@font/spartan"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/_8sdp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_marginTop="-24dp"
        android:elevation="@dimen/_50sdp"
        android:background="@drawable/bottom_sheet_bg">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHeading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            app:cardBackgroundColor="@color/fadedWhite"
            app:cardElevation="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <LinearLayout
                android:layout_gravity="center"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/claiming_date"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Estado"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/amount"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRewardClaimed"
            android:layout_below="@+id/cvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvNoClaim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reward_claimed_yet"
            android:layout_centerInParent="true"
            android:textColor="@color/darkGreen"
            android:fontFamily="@font/spartan"
            android:textSize="@dimen/_14ssp"/>

    </RelativeLayout>

</RelativeLayout>