<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/app_logo"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_12sdp"
        android:fontFamily="@font/spartan"
        android:text="@string/enter_otp_code"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:itemBackground="@drawable/otp_view_bg"
        android:textColor="@android:color/black"
        app:itemCount="6"
        app:itemHeight="@dimen/_44sdp"
        app:lineColor="@android:color/transparent"
        app:viewType="line" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawableEnd="@drawable/ic_right"
        android:text="@string/resend"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvBackToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_right"
        android:text="@string/back_to_sign_up"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"/>


</LinearLayout>